[project]
name = "nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Markos Kontoulis",email = "p22074@unipi.gr"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "protobuf (>=6.31.1,<7.0.0)",
    "blobfile (>=3.0.0,<4.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
